# SPARK-POC3

./: .gitignore  README.md  functions.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: blank.yml
client_data/: .part-00000-05767b3e-185d-4db2-8ce6-29bce17b7740-c000.csv.crc  .part-00000-c3ddee50-c591-4514-9fbd-3835478fd2db-c000.csv.crc  part-00000-05767b3e-185d-4db2-8ce6-29bce17b7740-c000.csv  part-00000-c3ddee50-c591-4514-9fbd-3835478fd2db-c000.csv
client_data/results_folder/: .part-00000-6a7b377f-8fb8-4ac3-91d1-2a3aae6ff532-c000.csv.crc  part-00000-6a7b377f-8fb8-4ac3-91d1-2a3aae6ff532-c000.csv
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: test_functions.py
venv_dir/Scripts/: activate  activate.bat
