[project]
name = "PysparkPOC"
version = "1.0.0"
readme = "README.md" # Optional
requires-python = ">=3.10"

[tool.setuptools]
packages = []

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"